--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.6.1",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-paper": "^5.11.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
