--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-picker/picker": "^2.6.1",
     "react": "18.2.0",
     "react-native": "0.73.0",
-    "react-native-paper": "^5.11.4"
+    "react-native-paper": "^5.11.4",
+    "react-native-safe-area-context": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
